# src/api-docs/openapi.yml
@@ -32,10 +32,16 @@ components:
           type: number
           description: Rating
           example: 7.5
+        director:
+          type: string
+          minLength: 1
+          description: Director
+          example: Christopher Nolan
       required:
         - name
         - year
         - rating
+        - director
     CreateMovieResponse:
       type: object
       properties:
@@ -62,11 +68,16 @@ components:
               type: number
               description: Rating
               example: 7.5
+            director:
+              type: string
+              description: Director
+              example: Christopher Nolan
           required:
             - id
             - name
             - year
             - rating
+            - director
         error:
           type: string
           description: Error message, if any
@@ -100,11 +111,16 @@ components:
                   type: number
                   description: Rating
                   example: 7.5
+                director:
+                  type: string
+                  description: Director
+                  example: Christopher Nolan
               required:
                 - id
                 - name
                 - year
                 - rating
+                - director
             - type: array
               items:
                 type: object
@@ -125,11 +141,16 @@ components:
                     type: number
                     description: Rating
                     example: 7.5
+                  director:
+                    type: string
+                    description: Director
+                    example: Christopher Nolan
                 required:
                   - id
                   - name
                   - year
                   - rating
+                  - director
               description: List of movies or an empty array if no movies exist
               example: []
             - type: "null"
@@ -205,6 +226,11 @@ components:
           type: number
           description: Rating
           example: 7.5
+        director:
+          type: string
+          minLength: 1
+          description: Director
+          example: Christopher Nolan
     UpdateMovieResponse:
       type: object
       properties:
@@ -231,11 +257,16 @@ components:
               type: number
               description: Rating
               example: 7.5
+            director:
+              type: string
+              description: Director
+              example: Christopher Nolan
           required:
             - id
             - name
             - year
             - rating
+            - director
           description: Updated movie data
         error:
           type: string
@@ -269,11 +300,16 @@ components:
               type: number
               description: Rating
               example: 7.5
+            director:
+              type: string
+              description: Director
+              example: Christopher Nolan
           required:
             - id
             - name
             - year
             - rating
+            - director
           description: Updated movie data
         error:
           type: string
